<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rom2109_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="romrobotics@gmail.com">mr_robot</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>
  <depend>rom2109_description</depend>  
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
